--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="cnnnet.ViewerWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525"
-        Loaded="OnWindowLoaded">
+        Title="MainWindow" Height="600" Width="800"
+        Loaded="OnWindowLoaded"
+        Closing="OnWindowClosing">
     <Grid>
         <Image x:Name="img" Width="800" Height="600"></Image>
     </Grid>
