--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
@@ -4,7 +4,13 @@
         Title="MainWindow" Height="600" Width="800"
         Loaded="OnWindowLoaded"
         Closing="OnWindowClosing">
-    <Grid>
-        <Image x:Name="img" Width="800" Height="600"></Image>
+    <Grid x:Name="LayoutRoot" Width="800" Height="600">
+        <Border Width="800" Height="600" Background="Black">
+            <Image x:Name="image" Width="800" Height="600"/>
+        </Border>
+
+        <Border Margin="20,20" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <TextBlock Name="FpsCounter" FontFamily="Verdana" FontSize="22" ></TextBlock>
+        </Border>
     </Grid>
 </Window>
