--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
@@ -1,16 +1,59 @@
 ﻿<Window x:Class="cnnnet.ViewerWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="800"
+        Title="MainWindow" Height="600" Width="1200"
         Loaded="OnWindowLoaded"
-        Closing="OnWindowClosing">
-    <Grid x:Name="LayoutRoot" Width="800" Height="600">
-        <Border Width="800" Height="600" Background="Black">
-            <Image x:Name="image" Width="800" Height="600"/>
-        </Border>
+        Closing="OnWindowClosing" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Grid x:Name="LayoutRoot">
 
-        <Border Margin="20,20" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left">
-            <TextBlock Name="FpsCounter" FontFamily="Verdana" FontSize="22" ></TextBlock>
-        </Border>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="800" />
+        </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <GroupBox Header="Controls" Grid.Row="0" Margin="10,0">
+                <Grid Margin="10,0,-2,0">
+                    <Button x:Name="ButtonStart" Content="Start" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonStartClick" />
+                    <Button x:Name="ButtonStop" Content="Stop" HorizontalAlignment="Left" Margin="80,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonStopClick"/>
+                    <Button x:Name="ButtonReset" Content="Reset" HorizontalAlignment="Left" Margin="269,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonResetClick"/>
+                    <Button x:Name="ButtonNext" Content="Next" HorizontalAlignment="Left" Margin="160,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonNextClick"/>
+                </Grid>
+            </GroupBox>
+            
+            <GroupBox Header="Selected Neuron" Grid.Row="1" Margin="10,0">
+                <Grid Margin="10,0,-2,0">
+                    <Label x:Name="labelId" Content="&lt;ID&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,4,0,0"/>
+                    <Label x:Name="labelLocation" Content="&lt;LOCATION&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="53,4,0,0"/>
+                </Grid>
+            </GroupBox>
+
+            <GroupBox Header="Display Settings" Grid.Row="3" Margin="10,10,10,0">
+                <Grid>
+                    <CheckBox x:Name="cboxNeuronDesirabilityMap" Content="Neuron Desirability Map" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Checked="OnCboxNeuronDesirabilityMapCheckedChanged" Unchecked="OnCboxNeuronDesirabilityMapCheckedChanged"/>
+                    <CheckBox x:Name="cboxNeuronDesirabilityRange" Content="Neuron Desirability Range" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
+                    <CheckBox x:Name="cboxNeuronUndesirabilityMap" Content="Neuron Undesirability Map" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" IsChecked="True" Checked="OnCboxNeuronUndesirabilityMapCheckedChanged" Unchecked="OnCboxNeuronUndesirabilityMapCheckedChanged"/>
+
+                </Grid>
+            </GroupBox>
+
+        </Grid>
+
+        <Grid Width="800" Height="600" Grid.Column="1">
+            <Border Width="800" Height="600" Background="Black">
+                <Image x:Name="image" Width="800" Height="600"/>
+            </Border>
+
+            <Border Margin="10,10" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left">
+                <TextBlock Name="FpsCounter" FontFamily="Verdana" FontSize="14" ></TextBlock>
+            </Border>
+        </Grid>
     </Grid>
 </Window>
