--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
@@ -16,31 +16,31 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <GroupBox Header="Controls" Grid.Row="0" Margin="10,0">
-                <Grid Margin="10,0,-2,0">
+                <Grid>
                     <Button x:Name="ButtonStart" Content="Start" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonStartClick" />
-                    <Button x:Name="ButtonStop" Content="Stop" HorizontalAlignment="Left" Margin="80,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonStopClick"/>
+                    <Button x:Name="ButtonStop" Content="Stop" HorizontalAlignment="Left" Margin="80,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonStopClick" IsEnabled="False"/>
                     <Button x:Name="ButtonReset" Content="Reset" HorizontalAlignment="Left" Margin="269,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonResetClick"/>
                     <Button x:Name="ButtonNext" Content="Next" HorizontalAlignment="Left" Margin="160,11,0,0" VerticalAlignment="Top" Width="75" Click="OnButtonNextClick"/>
                 </Grid>
             </GroupBox>
             
-            <GroupBox Header="Selected Neuron" Grid.Row="1" Margin="10,0">
-                <Grid Margin="10,0,-2,0">
-                    <Label x:Name="labelId" Content="&lt;ID&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,4,0,0"/>
-                    <Label x:Name="labelLocation" Content="&lt;LOCATION&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="53,4,0,0"/>
-                </Grid>
-            </GroupBox>
-
-            <GroupBox Header="Display Settings" Grid.Row="3" Margin="10,10,10,0">
+            <GroupBox Header="Display Settings" Grid.Row="1" Margin="10,0">
                 <Grid>
                     <CheckBox x:Name="cboxNeuronDesirabilityMap" Content="Neuron Desirability Map" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Checked="OnCboxNeuronDesirabilityMapCheckedChanged" Unchecked="OnCboxNeuronDesirabilityMapCheckedChanged"/>
                     <CheckBox x:Name="cboxNeuronDesirabilityRange" Content="Neuron Desirability Range" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
                     <CheckBox x:Name="cboxNeuronUndesirabilityMap" Content="Neuron Undesirability Map" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" IsChecked="True" Checked="OnCboxNeuronUndesirabilityMapCheckedChanged" Unchecked="OnCboxNeuronUndesirabilityMapCheckedChanged"/>
+                </Grid>
+            </GroupBox>
 
+            <GroupBox Header="Selected Neuron" Grid.Row="2" Margin="10,0">
+                <Grid>
+                    <Label x:Name="labelId" Content="&lt;ID&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,4,0,0"/>
+                    <Label x:Name="labelLocation" Content="&lt;LOCATION&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="53,4,0,0"/>
                 </Grid>
             </GroupBox>
 
