--- a/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/v3/cnnnet/cnnnet.ViewerWpf/MainWindow.xaml
@@ -39,8 +39,16 @@
 
             <GroupBox Header="Selected Neuron" Grid.Row="2" Margin="10,0">
                 <Grid>
-                    <Label x:Name="labelId" Content="&lt;ID&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,4,0,0"/>
-                    <Label x:Name="labelLocation" Content="&lt;LOCATION&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="53,4,0,0"/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    
+                    <Label x:Name="labelId" Grid.Row="0" Content="&lt;ID&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,4,0,0"/>
+                    <Label x:Name="labelLocation" Grid.Row="0" Content="&lt;LOCATION&gt;" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="53,4,0,0"/>
+
+                    <Image x:Name="imageAxonTerminalGuidanceForces" Width="100" Height="100"/>
                 </Grid>
             </GroupBox>
 
@@ -48,7 +56,7 @@
 
         <Grid Width="800" Height="600" Grid.Column="1">
             <Border Width="800" Height="600" Background="Black">
-                <Image x:Name="image" Width="800" Height="600"/>
+                <Image x:Name="imageNetwork" Width="800" Height="600"/>
             </Border>
 
             <Border Margin="10,10" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left">
