--- a/NET/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/cnnnet.ViewerWpf/MainWindow.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="cnnnet.ViewerWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="1200"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ViewerWpf="clr-namespace:cnnnet.ViewerWpf"
+        Title="MainWindow"
         Loaded="OnWindowLoaded"
         Closing="OnWindowClosing" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid x:Name="LayoutRoot">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="800" />
+            <ColumnDefinition Width="{Binding Source={x:Static ViewerWpf:Constants.NetworkWidth}}" />
         </Grid.ColumnDefinitions>
         
         <Grid Grid.Column="0">
@@ -61,9 +61,18 @@
 
         </Grid>
 
-        <Grid Width="800" Height="600" Grid.Column="1">
-            <Border Width="800" Height="600" Background="Black">
-                <Image x:Name="ImageNetwork" Width="800" Height="600"/>
+        <Grid 
+            Width="{Binding Source={x:Static ViewerWpf:Constants.NetworkWidth}}"
+            Height="{Binding Source={x:Static ViewerWpf:Constants.NetworkHeight}}"
+            Grid.Column="1">
+            <Border 
+                Width="{Binding Source={x:Static ViewerWpf:Constants.NetworkWidth}}"
+                Height="{Binding Source={x:Static ViewerWpf:Constants.NetworkHeight}}"
+                Background="Black">
+                <Image
+                    x:Name="ImageNetwork"
+                    Width="{Binding Source={x:Static ViewerWpf:Constants.NetworkWidth}}"
+                    Height="{Binding Source={x:Static ViewerWpf:Constants.NetworkHeight}}"/>
             </Border>
 
             <Border Margin="10,10" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left">
