--- a/NET/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/cnnnet.ViewerWpf/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ViewerWpf="clr-namespace:cnnnet.ViewerWpf"
         Title="MainWindow"
         Loaded="OnWindowLoaded"
-        Closing="OnWindowClosing" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Closing="OnWindowClosing" WindowStartupLocation="CenterScreen">
     <Grid x:Name="LayoutRoot">
 
         <Grid.ColumnDefinitions>
@@ -54,7 +54,9 @@
                         Grid.Row="1"
                         Width="100" Height="100" Background="Black"
                         HorizontalAlignment="Left">
-                        <Image x:Name="ImageAxonTerminalGuidanceForces" Width="100" Height="100"/>
+                        <Image x:Name="ImageAxonTerminalGuidanceForces" 
+                               Width="{Binding Source={x:Static ViewerWpf:Constants.AxonGuidanceForcesWidth}}"
+                               Height="{Binding Source={x:Static ViewerWpf:Constants.AxonGuidanceForcesHeight}}"/>
                     </Border>
                 </Grid>
             </GroupBox>
@@ -64,6 +66,7 @@
         <Grid 
             Width="{Binding Source={x:Static ViewerWpf:Constants.NetworkWidth}}"
             Height="{Binding Source={x:Static ViewerWpf:Constants.NetworkHeight}}"
+            Margin="10"
             Grid.Column="1">
             <Border 
                 Width="{Binding Source={x:Static ViewerWpf:Constants.NetworkWidth}}"
@@ -76,7 +79,7 @@
             </Border>
 
             <Border Margin="10,10" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left">
-                <TextBlock Name="FpsCounter" FontFamily="Verdana" FontSize="14" ></TextBlock>
+                <TextBlock Name="FpsCounter" FontFamily="Verdana" FontSize="14" />
             </Border>
         </Grid>
     </Grid>
