Register axon waypoint is performed on every step Replaced Contract implementation (performance improvment)

--- a/NET/cnnnet.ViewerWpf/MainWindow.xaml
+++ b/NET/cnnnet.ViewerWpf/MainWindow.xaml
@@ -122,7 +122,7 @@
             </Border>
 
             <Border Margin="10,10" Background="#55FFFFFF" VerticalAlignment="Top" HorizontalAlignment="Left"
-                    Visibility="Collapsed">
+                    Visibility="Visible">
                 <TextBlock Name="FpsCounter" FontFamily="Verdana" FontSize="14" />
             </Border>
         </Grid>
